--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -193,6 +193,7 @@
   /* login-forum */
 .login-forum
   background-image url(../i/login-bg.jpg)
+  background-color #fff
   //background-size 100% 100%
   background-repeat no-repeat
   background-position center center
