--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -40,16 +40,20 @@
     .user-body
       margin 15px 0 0 0
       line-height 26px
+      overflow auto
       .profile-item
         border-bottom 1px solid #cecece
         padding-bottom 10px
+        margin-bottom 10px
         &.last
           border-bottom 0
       h3
         font-size 20px
+        margin-top 0
+      h4
+        font-size 16px
       span
         display inline-block
-        font-weight bold
       .user-addresses
         padding-bottom 30px
         span
