--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -38,14 +38,19 @@
                         && profile.userProfile.family.pets != null">
                             <h3>Семья</h3>
                             <div ng-show="profile.userProfile.family.relations != null"><span>Семейное положение: </span> {{profile.userProfile.family.relationsMeta}}</div>
-                            <div ng-show="profile.userProfile.family.childs && profile.userProfile.family.childs.length != 0"><span>Дети: </span>
+                            <div ng-show="profile.userProfile.family.childs && profile.userProfile.family.childs.length != 0 && profile.userProfile.family.childs[0].name">
+                                <h4>Дети: </h4>
                                 <div ng-repeat="child in profile.userProfile.family.childs">
-                                    {{child.name}}, родился: {{child.birthday*1000 | date: 'MM.yyyy'}}
+                                    {{child.name}}
+                                    <span ng-show="child.birthday">, родился: {{child.birthday*1000 | date: 'MM.yyyy'}}</span>
                                 </div>
                             </div>
-                            <div ng-show="profile.userProfile.family.pets != null && profile.userProfile.family.pets.length != 0 && profile.userProfile.family.pets[0].name"><span>Питомцы:</span>
+                            <div ng-show="profile.userProfile.family.pets != null && profile.userProfile.family.pets.length != 0 && profile.userProfile.family.pets[0].name">
+                                <h4>Питомцы:</h4>
                                 <div ng-repeat="pet in profile.userProfile.family.pets">
-                                    {{pet.name + ", "+ pet.typeMeta+", "+pet.breed}}
+                                    {{pet.name}}
+                                    <span ng-show="pet.typeMeta">, {{pet.typeMeta}}</span>
+                                    <span ng-show="pet.breed">, {{pet.breed}}</span>
                                 </div>
 
                             </div>
