--- a/vonline_be/war/css/login.css
+++ b/vonline_be/war/css/login.css
@@ -243,6 +243,7 @@
 }
 .login-forum {
   background-image: url("../i/login-bg.jpg");
+  background-color: #fff;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
