--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -560,6 +560,8 @@ transform()
   border-radius 0
 .itemdiv.dialogdiv > .body
   padding-bottom 28px
+.itemdiv
+  padding-right 0
 .btn.active:after
   border-bottom 0
 .btn-info.no-border.active
@@ -1248,5 +1250,6 @@ transform()
       margin-left 5px
   .itemdiv.dialogdiv > .body
     padding-bottom 0
+
 
 
