good height of profile

--- a/vonline_be/war/partials/adverts-single.html
+++ b/vonline_be/war/partials/adverts-single.html
@@ -1,5 +1,5 @@
 
-<section class="talks-block">
+<section class="talks-block ng-cloak">
 
     <section class="forum adverts-single" infinite-scroll="adverts.addMoreItems()">
 
