--- a/vonline_be/war/partials/adverts.html
+++ b/vonline_be/war/partials/adverts.html
@@ -1,5 +1,5 @@
 
-    <section class="adverts page" ng-show="base.advertsIsActive">
+    <section class="adverts page ng-cloak" ng-show="base.advertsIsActive">
 
         <section class="create-topic" ng-hide="base.createTopicIsHide">
             <div class="has-info form-group">
