--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -1,4 +1,4 @@
-<section class="profile page"> <!--  ng-show="base.profileIsActive" -->
+<section class="profile page ng-cloak"> <!--  ng-show="base.profileIsActive" -->
     <div class="profile">
         <section class="user-descr">
             <div class="text-area">
