--- a/vonline_be/war/partials/talks-single.html
+++ b/vonline_be/war/partials/talks-single.html
@@ -1,5 +1,5 @@
 
-<section class="talks-block"> <!--  ng-hide="base.isTalkTitles" -->
+<section class="talks-block ng-cloak"> <!--  ng-hide="base.isTalkTitles" -->
 
     <section class="forum talks-single" infinite-scroll="talks.addMoreItems()">
 
