--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -1,5 +1,5 @@
 
-    <section class="talks page" ng-show="base.talksIsActive">
+    <section class="talks page ng-cloak" ng-show="base.talksIsActive">
 
         <section class="create-topic" ng-hide="base.createTopicIsHide">
             <div class="has-info form-group">
