--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1214,13 +1214,15 @@ transform()
 .blog
   text-align left
   .post
-    padding 15px 0
+    padding 15px 0 5px 0
     border-top 1px solid #ccc
     &:first-child
       border-top 0
   .dialogs
   .input-group
     display none
+  .dialogs
+    padding 0
   .anonName
     width 100%
     margin-bottom 10px
@@ -1242,6 +1244,7 @@ transform()
   .topic
   .topic-stuff
     margin-left 210px
+    padding-bottom 10px
   .lenta-item-bottom
     span
     a
