--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -12,11 +12,14 @@ body.height100 {
   height: 100%;
   padding-bottom: 45px;
 }
+body.height100-2 {
+  padding-bottom: 105px;
+}
 a {
   outline: none !important;
 }
 h1 {
-  margin-top: 10px;
+  margin-top: 0;
   font-size: 24px;
 }
 .btn-primary,
