--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -1,5 +1,5 @@
 
-        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" infinite-scroll="lenta.addMoreItems()" ng-cloak> <!--  ng-controller="LentaController as lenta" -->
+        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" infinite-scroll="lenta.addMoreItems()" ng-cloak>
             <div class="message-input clearfix">
                 <textarea ng-model="lenta.wallMessageContent" class="no-resize" ng-keyup="base.messageChange($event,1)"
                     onblur="if(this.value=='') this.value='Написать сообщение';"
@@ -89,7 +89,9 @@
 
                                 <div class="edit-message" ng-show="wallItem.topic.isEdit">
                                     <textarea class="no-resize message-textarea edit-textarea" ng-model="wallItem.topic.message.content" ng-keyup="base.messageChange($event)" ng-hasfocus="wallItem.topic.isFocus"></textarea>
-                                    <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(wallItem.topic,true)" href="#">Сохранить</a> <!--  -->
+
+                                    <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(wallItem.topic,true)" href="#">Сохранить</a>
+
                                 </div>
 
                                 <div class="attached" ng-show="wallItem.topic.message.images.length || wallItem.topic.message.documents.length">
